--- a/003.org
+++ b/003.org
@@ -397,6 +397,6 @@ And /Stay low to Scrub!/
 
 #+begin_quote
 Kids, don't forget to pick up your free toys and ask as many questions you like of our volunteers!!
-
-Thag made his most enthusiastic wave goodbye. His one arm being a disproportionate part of his body's mass, when compared to most. He almost made a flippy-flop with both the upper and lower halves, all the while grinning ghoulishly.
 #+end_quote
+
+Thag made his most enthusiastic wave goodbye. His one arm being a disproportionate part of his body's mass when compared to most, he almost made a flippy-flop of an unstrung bow, with both the upper and lower halves moving equally, all the while grinning ghoulishly.
