--- a/003.org
+++ b/003.org
@@ -399,4 +399,4 @@ And /Stay low to Scrub!/
 Kids, don't forget to pick up your free toys and ask as many questions you like of our volunteers!!
 #+end_quote
 
-Thag made his most enthusiastic wave goodbye. His one arm being a disproportionate part of his body's mass when compared to most, he almost made a flippy-flop of an unstrung bow, with both the upper and lower halves moving equally, all the while grinning ghoulishly.
+Thag made his most enthusiastic wave goodbye. His one arm being a disproportionate part of his body's mass when compared to most, he almost made the flippy-flop of an unstrung bow, with both the upper and lower halves moving more or less equally, all the while grinning ghoulishly.
