--- a/003.org
+++ b/003.org
@@ -61,13 +61,13 @@ Grav's run became a staggering, rhythmic stomp as he laughed maniacally while co
 
 He eventually righted himself, making a lot of noise as he pushed himself up, snapping small branches and spitting out a sparse cloud of tiny purple petal glitter and twigs that had ended up in his open mouth.
 
-"Scout[fn:: "Dude!!"], you need to lay off of that stuff! Not everyone is as mirth-filled as us, you know. The Forest Executioners are not known for their stoatishness[fn:: Sillyness].", said Grav.
+"Scout[fn:: "Dude!!"], you need to lay off of that stuff! Not everyone is as mirth-filled as us, you know. The Forest Executioners are not known for their stoatishness[fn:: Silliness].", said Grav.
 
 "Eegh. I'm tired of worrying about it, to be frank." Gog was such an artist with his banana-language that he was no longer entertained by it, and so was laughing not at all. It seemed like he just thought of it as his 'job'; trudging through another day of saying things that caused others to nearly have a stroke with hilarity. "You know either of us could be dead tomorrow."
 
 "Yeah, but probably not /from torture/.", reasoned Gog.
 
-"I mean, yeah, of course I will always take reasonable precautions. But mount it, it becomes so much of a drain on me to constantly have to edit my words, that I'm willing to be a bit 'strategically reckless' in order to just relax for a /sewing/ change!!" Gog seemed to be shaking his head in disgust. "Also, always feeling like I want to live another day so that I can say as much banana as I want is its own kind of motivation to not get cheeped on[fn:: 'Snitched on', 'told on'. It was the the automonopoetic word for the sounds a baby bird makes, like in many langues, 'cheep'. So to 'cheap' on someone was to cry to mamma bird, in essence.]."
+"I mean, yeah, of course I will always take reasonable precautions. But mount it, it becomes so much of a drain on me to constantly have to edit my words, that I'm willing to be a bit 'strategically reckless' in order to just relax for a /sewing/ change!!" Gog seemed to be shaking his head in disgust. "Also, always feeling like I want to live another day so that I can say as much banana as I want is its own kind of motivation to not get cheeped on[fn:: 'Snitched on', 'told on'. It was the the onomatopoetic word for the sounds a baby bird makes, like in many languages, 'cheep'. So to 'cheap' on someone was to cry to mamma bird, in essence.]."
 
 "There's some motivation.", pondered Grav.
 
@@ -312,7 +312,7 @@ She started eating me at this point.
 The children's only reaction to this was to stare.
 
 #+begin_quote
-Birds naturally go after the softer parts. And since all of my might was tied up in protecting my eyes[fn:: Thag was missing both eyes and had only rather smooth and neat looking skin-lined sockets. Being covered with scars and sometimes-open wounds required lots of thoughtful, tender skin care, of which he got plenty. Most of his eye-socket skin had the look of exquisite kid leather. He had a retaneu of assistants to meet every one of his needs. Modern readers will be interested in noting that, due to the shape of Thag's face, the eyes had a marked "hollow face" effect. If you were not expecting it, and in the right lighting, he sometimes had the look of someone with two enormous pupils following you with their gaze as you move about.], she had mostly free reign over my groin parts.
+Birds naturally go after the softer parts. And since all of my might was tied up in protecting my eyes[fn:: Thag was missing both eyes and had only rather smooth and neat looking skin-lined sockets. Being covered with scars and sometimes-open wounds required lots of thoughtful, tender skin care, of which he got plenty. Most of his eye-socket skin had the look of exquisite kid leather. He had a retinue of assistants to meet every one of his needs. Modern readers will be interested in noting that, due to the shape of Thag's face, the eyes had a marked "hollow face" effect. If you were not expecting it, and in the right lighting, he sometimes had the look of someone with two enormous pupils following you with their gaze as you move about.], she had mostly free reign over my groin parts.
 #+end_quote
 
 The children didn't move, especially the boys.
