--- a/003.org
+++ b/003.org
@@ -43,8 +43,6 @@ Would word about their find have made its way yet? Not feeling any particular ne
 
 Verk could easily send a message. He probably had, given that he was now, to none of their surprise, going to wrap himself all the around this[fn:: 'Take credit for'. If you are 'half wrapped around' you are taking half credit. If you are 'wrapped all the way around', you were taking full credit. The "unearned" part is always implied.].
 
-xxx we use Under-Men to both mean "verk's thugs" and "the learned men in the ancient-speak burrow"... must untangle. xxx
-
 And even if none of that, there was a regular flow of traffic to and from Fayt-Caves; men attending club-drill, general commerce, or newly-married baby-makers relocating to their new home[fn:: This journey, no matter how long, was always made alone. Crec Cavewomen were nearly universally safe from abuse at the hands of men, but that was not the only risk that women uniquely share as a group. Survival of any but the most hardy among women was legitimately at risk on any lone trek that took more than one day. Of course each additional night added to the risk. Everyone was at risk at all times, but more so at night. For men, this risk was thought to be "manageable". It was markedly greater for any lone women. It was considered bad form to approach a women while on her selection-journey. A pious caveman would politely ignore a women being mauled by a tooth-cat for example.]. The traffic was always "very light". You might see three or four other parties over two nights. The parties might be of size one or all-finger all-finger. In certain seasons, you might encounter no one.
 
 It was hard to say, in other words.
@@ -304,7 +302,7 @@ Once it was sure it had a good hold of me, I guess it wanted to make sure I was 
 
 And indeed that's where the first gap in my memory lives, although I'm able to fill it with all kinds of nightmares, and sometimes do. Don't lament small game[fn:: Don't sweat the small stuff. Don't cry over spilled milk.], kids.
 
-When I came back around the first time, it was because she was slowing her flight to set me on her perch. It was a scat and bone covered fortress of sorts. It was clear that she[fn:: The male lizard-bird are xxx.] and she alone lived there. It was literally in the clouds so I only had the slightest idea, at least initially, of where I was and what was going on any more than all-finger man away.
+When I came back around the first time, it was because she was slowing her flight to set me on her perch. It was a scat and bone covered fortress of sorts. It was clear that she[fn:: Appendix: lizard-bird, genders.] and she alone lived there. It was literally in the clouds so I only had the slightest idea, at least initially, of where I was and what was going on any more than all-finger man away.
 
 She started eating me at this point.
 #+end_quote
