--- a/003.org
+++ b/003.org
@@ -145,7 +145,7 @@ While the men were talking, the forest-child made a series of gestures. "Warning
 
 His feedback from the toddler was a shrug. Grav made a "big eat-y beak" gesture with his two outstretched arms, perhaps with fingers playing the roll of some hooked teeth at the tips.
 
-The toddler's eyes made saucers. He pointed at Grav and jumped rapidly with bent knees, his torso more or less stationary, as one might at the height of a Pictionary nail-biter.
+The toddler's eyes made saucers. He pointed at Grav and jumped rapidly with bent knees, his torso more or less stationary as one might at the height of a Pictionary nail-biter.
 
 Lizard-bird could and would kill men. There was no /scoop 'em up with the beak and swallow whole/. No, that would be a better fate. Someone from their and most others' childhood shared-experience was quite impactful in their respect for lizard-bird.
 
