--- a/003.org
+++ b/003.org
@@ -41,7 +41,7 @@ Knowing that he would get no movement from Gog, who liked to play friendly-decor
 
 Would word about their find have made its way yet? Not feeling any particular need to be there, Verk, whose methods were not questioned, would not be at the camp. He would make his way back eventually, at his own pace, likely after Grav and Gog had gone. Verk, retinue, and Under-Men would not have returned to Fayt-Caves yet.
 
-Verk could easily send a message. He probably had, given that he was now, to none of their surprise, going to wrap himself all the around this[fn:: 'Take credit for'. If you are 'half wrapped around' you are taking half credit. If you are 'wrapped all the way around', you were taking full credit. The "unearned" part is always implied.].
+Verk could easily send a message. He probably had, given that he was now, to none of their surprise, going to wrap himself all the way around this[fn:: 'Take credit for'. If you are 'half wrapped around' you are taking half credit. If you are 'wrapped all the way around', you were taking full credit. The "unearned" part is always implied.].
 
 And even if none of that, there was a regular flow of traffic to and from Fayt-Caves; men attending club-drill, general commerce, or newly-married baby-makers relocating to their new home[fn:: This journey, no matter how long, was always made alone. Crec Cavewomen were nearly universally safe from abuse at the hands of men, but that was not the only risk that women uniquely share as a group. Survival of any but the most hardy among women was legitimately at risk on any lone trek that took more than one day. Of course each additional night added to the risk. Everyone was at risk at all times, but more so at night. For men, this risk was thought to be "manageable". It was markedly greater for any lone women. It was considered bad form to approach a women while on her selection-journey. A pious caveman would politely ignore a women being mauled by a tooth-cat for example.]. The traffic was always "very light". You might see three or four other parties over two nights. The parties might be of size one or all-finger all-finger. In certain seasons, you might encounter no one.
 
