--- a/003.org
+++ b/003.org
@@ -103,7 +103,7 @@ Grav knew his opening comment would be ignored for signs of "foreignness", far f
 
 The bulk of these encounters were eerily similar to one another, and each time it seemed they had to build their pantomime vocabulary with them from scratch. But they were practiced, and both men knew in any case, they'd have to get through the first, rather long part where the forest-child is unaware they do not understand.
 
-And for all anyone could tell, a forest-child /was/ a child. It was astonishing. No matter how hard anyone had tried, they couldn't make out any dwarfish features. Other than often being scarred and every so often missing fingers, teeth, eyes, or limbs, and but for toned muscles under leathery, tough skin, they were what we moderns would call "toddlers".
+And for all anyone could tell, a forest-child /was/ a child. It was astonishing. No matter how hard anyone had tried, they couldn't make out any dwarfish features. Other than often being scarred and every so often missing fingers, teeth, eyes, or limbs, and but for the toned muscles under leathery, tough skin, they were what we moderns would call "toddlers".
 
 They did not know Crecspeak or anything remotely like it, but were evidently fluent in some kind of language. The small boy[fn:: No one had ever seen a female, and anyway it was always apparent the present company was male in gender.] slouched in a way that a very relaxed, fit, successful older caveman would; a standing slouch that said he could take them or leave them. Or possibly even kill them. But he showed no sense of fear or hatred, just casual toddlerness. They smoked a pipe in about half the cases. This one was not a partaker[fn:: The ones that smoked, really smoked, and somehow seemed to reeked of whatever weed they smoke even upwind. There were other ever-present "base tones" that they all had. They carried along with them a sort of weather system of gnats, flies and stink. An observation that might have been helpful for the non-smokers, if it could ever be conveyed was, the smokers had noticeably fewer flying pests.]. He currently stood with the sole of one foot resting on the calf of the other leg, with an all-wood spear, at least three times his height stuck in the ground and currently serving as just a staff to lean on, ever casually.
 
