--- a/Spoilers.org
+++ b/Spoilers.org
@@ -49,6 +49,7 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Notes
 
+- Wouldn't it be cool if Jurd had some "audio problems" and Thag had to struggle out there in front of hundreds of kids silently for a quarter palm.
 - If we need a girlfriend episode: We know that one just ignores women on selection-journey, but a character /could/ choose to break protocol, fall in love, and escape into the anonymous jungle with your new bride-prize to start a new life. aww.
 - Seems like if G&G are going /to/ the camp from BZ, it would be reasonable to assume that Verk came /from/ that direction in Ch01. So, do G&G not go through monkey pass?
 - Snogny-Dodk copy protection:
