--- a/003.org
+++ b/003.org
@@ -318,7 +318,7 @@ The children didn't move, especially the boys.
 #+begin_quote
 I switched from protecting my eyes to protecting my groin as fast as I was able, but the bird had every possible advantage over me.
 
-At length I was too exhausted to keep up and upon my surrendering, she took up /all/ of my parts and then some, squeezed with her mighty beak and pulled. Of course she had flipped me over at this point and was putting new holes in my front half.
+At length I was too exhausted to keep up and upon my surrendering, she took up /all/ of my parts and then some, squeezed with her mighty beak and pulled. Of course she had flipped me over by this point and was putting new holes in my front half.
 
 For her all this was truly was effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
 
