--- a/003.org
+++ b/003.org
@@ -198,7 +198,7 @@ Thag smiled with satisfaction which, with his lower lip missing, was quite a smi
 Thag's thunderous borrowed voice continued as Thag made a kind of one-armed shrug.
 
 #+begin_quote
-/Well/... I was walk home from J'anz-Caves along the path that many of you know well, it's not close to here, but it's close enough. Many of you have seen it in person. It was along The Great Hummingbird Trail, which connects J'anz-Caves, the starting point of my trek to Prominence-Caves, where my parents and I lived at the time. As you know, this is all way down at the far morning-sun-right-side of our Forest.
+/Well/... I was walk home from J'anz-Caves along the path that many of you know well. It's not close to here, but it's close enough. Many of you have seen it in person. It was along The Great Hummingbird Trail, which connects J'anz-Caves, the starting point of my trek to Prominence-Caves, where my parents and I lived at the time. As you know, this is all way down at the far morning-sun-right-side of our Forest.
 
 We have Balrag for neighbors, so we know a lot about getting along and also about surviving. They're good cavepeople.
 #+end_quote
