--- a/003.org
+++ b/003.org
@@ -139,7 +139,7 @@ While the men were talking, the forest-child made a series of gestures. "Warning
 
 "Is that a tail? Egg?"
 
-"Lizard bird?", asked Grav.
+"Lizard-bird?", asked Grav.
 
 "I'm pretty sure he is saying lizard-bird something. Egg... Could it be eating for two and therefore especially hungry?", Gog asked Grav while making intense, questioning eye contact with the forest-child.
 
@@ -286,12 +286,12 @@ But it was true that Thag was afraid of lizard-bird still in a way that makes ga
 This time too, Thag had to snap out of it and continue his outreach in the most productive way possible, as always.
 
 #+begin_quote
-I was tackled from behind in a way that felt like being stabbed from behind by seven or eight blunt but sharp obsidian blades somehow wielded by a massive speeding boulder of warmth, muscle, and sparse, downy feathers; this only the beginning of its horror.
+I was tackled from behind in a way that felt like being stabbed from behind by seven or eight blunt but sharp obsidian blades somehow wielded by a massive speeding boulder of warmth, muscle, and sparse, downy feathers; this only the beginning of its horrors.
 
 She rode me like a hill-sled for probably four man; talons squeezing as we slid. By the time we stopped I felt like I had been wrapped in obsidian-vine[fn:: A vine that grows throughout the Crec realm. If carefully removed and uncoiled (which was obviously a dangerous art) from its host trees, which may be many, and then lightly fire-hardened. It could become a kind of barbed wire. But with pinkie-thumb sized, needle-pointed barbs.], with several powerful men wrapping it ever-tighter around me. You don't know what it feels like to be mercilessly /squeezed/ by something so terrible...
 #+end_quote
 
-Thag trailed off, eyes empty[fn:: Thag was missing both eyes and had only rather smooth and neat looking skin-lined sockets. Being covered with scars and sometimes-open wounds required lots of thoughtful, tender skin care, of which he got plenty. Most of his eye-socket skin had the look of exquisite kid leather. He had a retinue of assistants to meet every one of his needs. Modern readers will be interested in noting that, due to the shape of Thag's face, the eyes had a marked "hollow face" effect. If you were not expecting it, and in the right lighting, he sometimes had the look of someone with two enormous pupils following you with their gaze as you move about.]. This was an impressive piece of seemingly impromptu emoting by the duo. The children continued to watch until he shook himself and the voice continued.
+Thag trailed off, eyes empty[fn:: Thag was missing both eyes and had only rather smooth and neat looking skin-lined sockets. Being covered with scars and sometimes-open wounds required lots of thoughtful, tender skin care, of which he got plenty. Most of his eye-socket skin had the look of exquisite kid leather. He had a retinue of assistants to meet every one of his needs. Modern readers will be interested in noting that, due to the shape of Thag's face, the eyes had a marked "hollow face" effect: If you were not expecting it, and in the right lighting, he sometimes had the look of someone with two enormous pupils following you with their gaze as you move about.]. This was an impressive piece of seemingly impromptu emoting by the duo. The children continued to watch until he shook himself and the voice continued.
 
 #+begin_quote
 She was standing on top of me. And she was /heavy/; at least a good sized hyena's weight. As I struggled in a way only one in that situation can truly struggle, it would lift me about a palm with its wings, and then /slam/ me against the ground with all of its weight, making the talons as secure as possible... /in me/!
@@ -312,7 +312,7 @@ She started eating me at this point.
 The children's only reaction to this was to stare.
 
 #+begin_quote
-Birds naturally go after the softer parts. And since all of my might was tied up in protecting my eyes, she had mostly free reign over my groin parts.
+Birds naturally go after the softer parts first. And since all of my might was tied up in protecting my eyes, she had mostly free reign over my groin parts.
 #+end_quote
 
 The children didn't move, especially the boys.
