--- a/003.org
+++ b/003.org
@@ -366,7 +366,7 @@ I will say that when I was finally found, /before/ the many moons of rest with t
 
 The parts that I can remember probably only add up to a few days. I suspect it had just rained and misted so much up there where that soggy mass of moss still lives, that I drank up moisture through my skin and so did not develop a thirst.
 
-I had to have been there, slowly recovering in that massive bed of moss for five or seven days, with no food, water or awareness.
+I had to have been there, slowly recovering in that massive bed of moss for five or seven days, with no food, drink or awareness.
 
 And it was cold. Never freezing, but cold. I believe my body was also preserved because the cold slowed down its corruption, like when fresh meat is found under the snow in early spring.
 
