--- a/003.org
+++ b/003.org
@@ -227,7 +227,7 @@ Thag made violent swatting motions with his one arm towards random slices of aud
 
 Involuntarily jiggling finger-stumps, while not adding any 'realness', did add to the overall horror of the gesture.
 
-Calling it quits at this point, a quiet-one stomped all over the neighbors behind her: faces, groins, where ever her powerful little hard feet landed, after which she sprinted out of the theater.
+Calling it quits at this point, a quiet-one stomped all over the neighbors behind her: faces, groins, wherever her powerful little hard feet landed, after which she sprinted out of the theater.
 
 Her brother, having been priming her with fear for days knew just how to nudge her over into mindless, frantic flight. In this case it was with a well-timed jab to the ribs.
 
@@ -381,7 +381,7 @@ Gritty survival like that is something that surely all of you will eventually ex
 
 Thag's tale continued with mood-lightening material and some mostly unproductive question and answer time at the very end.
 
-He had worked his way down the mountainside, for it was a very high mountain, and going where ever down-power took him, he encountered people. Those people nursed him for many moon, all the while being unable to communicate with him, and his family having no idea what had happened to their Thag all the while.
+He had worked his way down the mountainside, for it was a very high mountain, and going wherever down-power took him, he encountered people. Those people nursed him for many moon, all the while being unable to communicate with him, and his family having no idea what had happened to their Thag all the while.
 
 Thereafter you already know the story.
 
