--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -4,7 +4,9 @@
 
 Grav and Gog were faced with spending the night, baring a miracle, in the most dangerous place possible, only because a much greater danger had recently moved into the area, like bad weather, but worse.
 
-This was part of the life-long education the Men had about lizard-birds.  The woods were safe, and yet they weren't. They were also the only reasonable choice. This was definitely toward the end of the curriculum, but they both knew the approximate odds of either choice, and chose the least bad: They would be spending the night on the edge of Small Woods somehow or other.
+This was part of the life-long education the men had about lizard-birds.  The woods were safer but not safe. They were also the only reasonable choice.
+
+This was definitely toward the end of the curriculum, but they both knew the approximate odds of either choice, and chose the least bad: They would be spending the night on the edge of Small Woods somehow or other.
 
 The forest-child stood and stared at the two, both lost in thought.
 
@@ -14,21 +16,23 @@ He made the eyes-widening, brow-rising, cock to the head "/well?!/" expression t
 
 "Yes.", agreed Gog. Then after a pause, ".../what/ is he asking us?"
 
-The forest-child made a mock jog in the direction he had been heading and then again 'well?'
+The forest-child made a mock jog in the direction he had been heading and then again: "/well?/"
 
-Grav and Gog looked at each other. Not having a preference for /where/ along the margin of the dangerous woods they would sleep, at least generally. They gave in and mimed that they would go with him. "After you, sir", was their chosen gesture of response.
+Grav and Gog looked at each other. Not having a preference for /where/ along the margin of the dangerous woods they would sleep, at least generally, they gave in and mimed that they would go with him. "After you, sir", was their chosen gesture of response.
 
-The followed the stinking baby at a right angle to the path. As mentioned, forest-children tend to travel as though everywhere was a path. They could travel the path of a bird, but projected onto the ground. For them, the shortest path between two points was shorter than it is for most.
+They followed the stinking baby at a right angle to the trail. As mentioned, forest-children tend to travel as though everywhere was a path. They could travel the path of a bird, but projected onto the ground. For them, the shortest path between two points was shorter than it is for most.
 
-In the growth strata of most jungle or woods, there was a fairly consistently unocupied bit of vertical realestate. There were juicy, mostly edible ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-hight for an adult Crec. A /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above him, which is a good thing as this is also a strata where spines and poisons where most called for to shoo away anything that might disturb there peace.
+In the growth strata of most jungle or woods, there was a fairly consistently unoccupied bit of vertical real estate. There were juicy, mostly edible ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-hight for an adult Crec.
 
-For the men, this meant a walk through thick, chest-high bush that was all painful or uncomfortable in some way or other. Plenty of more fauna-type dangerous and painful things lived in this layer. This was the whole reason for establishg paths after all!
+But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above, which is a good thing as this is also a strata where spines and poisons where most called for to shoo away anything that might disturb their peace. <-xxx
 
-The men, their spears now being employed as brush clearing blades, at which they were barely more useful than any other stick, were swatting away face-sized, muscular, quick spiders, all-but-invisible, small but poisonous green vipers, the occasional poisonous frog or centipedes (and the pretenders, who they could both identify as harmless, even at this pace.)
+For the men, this meant a walk through thick, chest-high bush that was all painful or uncomfortable in some way or other. Plenty of the more fauna-type dangerous and painful things lived in this layer. This was the whole reason for established paths after all!
 
-It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby, now dragging his long spear behind, his hand around its tip, his thumb seemingly checking the point for sharpness mindlessly at intervals.
+The men, their spears now being employed as brush clearing blades, at which they were barely more useful than any other stick, were swatting away face-sized, muscular, quick spiders, all-but-invisible small but poisonous green vipers, and the occasional poisonous frog or centipede (and the pretenders, who they could identify as harmless, even at this pace.)
 
-Though he had a mostly normal speaking voice, if a bit high-pitched, his singing brought out more usual-sounding baby noises. He was singing softly in his language, presumably, punctuating and making rhythmic noises made of coos, mummers, and occasionally a delighted squeal. This did nothing to take away from the uncanniness that this otherwise confident baby had.
+It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby, now dragging his long spear behind, his hand around its tip, his thumb seemingly checking the point for sharpness mindlessly at intervals, had no trouble at all. <-xxx
+
+Though he had a mostly normal speaking voice, if a bit high-pitched, his singing brought out more usual-sounding baby noises. He was singing softly in his language, presumably, punctuating and making rhythmic noises made of coos, mummers, and occasionally a delighted squeal. This did nothing to take away from the uncanniness that this sophistocated baby had.
 
 It was getting dark, but was not yet killing-palm. The forest-child seemed unbothered, and was now making occasional tight turns, as though the party had switched to surface streets and was almost home. There seemed to be a /destination/ coming up.
 
