--- a/fragments/bird.org
+++ b/fragments/bird.org
@@ -36,7 +36,7 @@ Though he had a mostly normal speaking voice, if a bit high-pitched, his singing
 
 It was getting dark, but was not yet killing-palm. The forest-child seemed unbothered, and was now making occasional tight turns, as though the party had switched to surface streets and was almost home. There seemed to be a /destination/ coming up.
 
-Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not Natural but was just as clearly very old. It was made out of stone that had been squared off mostly. Where it was irregular, it appeared more that this was due to errosion of some kind. One could imagine it being /quite/ square. What the men would describe as "Unnatural"[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'].
+Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not Natural but was just as clearly very old. It was made out of stone that had been squared off mostly <-xxx. Where it was irregular, it appeared more that this was due to erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural"[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'].
 
 The joints between the stones gave the impression that the creators had balanced finding an appropriately-shaped stone with the trouble of removing material to create a finer fit. The joints between the stones did not make a regular, gemoetric pattern like one would see in modern block construction. The lines between the stones were more jagged and irregular, but in a pleasing way. In this case, though, where there were joins, there were impossibly tight. There was the look of crazed lines scratched all over a smooth rock wall, for the exterior of the hide had proper "walls", at right angles to one another. It was made from irregularar stone puzzle pieces that somehow fit one another perfectly.
 
